--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <!--this is row with sweet slider and spoon img-->
                     <div class="row mt-3 ">
                         <div class="col-8">
-                            <label for="sweetRange" class="form-label mt-3">słodkość</label>
+                            <label for="sweetRange" class="form-label">słodkość</label>
                             <input type="range" class="form-range custom-slider" min="0" max="2" id="sweetRange">
                         </div>
                         <div class="col-4 ml-3">
@@ -58,7 +58,7 @@
                         <!--This is row with centered button-->
                         <div class="row pt-5 pb-3">
                             <div class="d-grid gap-2 col- mx-auto mt-4">
-                                <button type="submit"  class="btn  btn-color">Oblicz przepis</button>
+                                <button type="submit"  class="btn  btn-color" id="recipeBtn">Oblicz przepis</button>
                                 
                             </div>
                         </div>
