--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
     <!--Main CSS-->
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -40,7 +40,7 @@
                           <input type="range" class="form-range" min="0" max="2" id="cocoaRange">
                         </div>
                         <div class="col-4">
-                            <img class="mug" src="public/images/mug-00.png" >
+                            <img class="mug" src="images/mug-00.png" >
                         </div>
                     </div>
                     
@@ -51,7 +51,7 @@
                             <input type="range" class="form-range custom-slider" min="0" max="2" id="sweetRange">
                         </div>
                         <div class="col-4 ml-3">
-                            <img class="spoon" src="public/images/spoon-03.png" >
+                            <img class="spoon" src="images/spoon-03.png" >
                         </div>
                     </div>
                         
