set new index.js

--- a/recipe.html
+++ b/recipe.html
@@ -38,8 +38,8 @@
                     <ul>
 
                         <li>300 ml mleka</li>
-                        <li>tsSugar cukru</li>
-                        <li>tsCocoa kakao</li>
+                        <li> <span id="sugarText">tsSugar</span> cukru</li>
+                        <li><span id="cocoaText">tsCocoa</span> kakao</li>
 
                     </ul>
 
@@ -87,9 +87,8 @@
      <!--Bootstrap JS--> 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!--Main JS-->
-    <script src="app.js"></script>
-
+    <!-- Main JS -->
+    <script src="index.js"></script>
 
 </body>
 </html>
