add switch, event listeners, finish funcionality

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                           <div class="col-8">
                               <label for="cocoaRange" class="form-label">kakałkowatość</label>
                               <input type="range" class="form-range" min="0" max="2" id="cocoaRange">
+                              <p class="cocoa-text">NORMAL</p>
                             </div>
                             <div class="col-4">
-                                <img class="mug" src="public/images/mug-00.png" >
+                                <img class="mug" src="public/images/mug-01.png" >
                             </div>
                         </div>
                         
@@ -52,9 +53,10 @@
                             <div class="col-8">
                                 <label for="sweetRange" class="form-label">słodkość</label>
                                 <input type="range" class="form-range custom-slider" min="0" max="2" id="sweetRange">
+                                <p class="sweet-text">SWEET</p>
                             </div>
                             <div class="col-4 ml-3">
-                                <img class="spoon" src="public/images/spoon-03.png" >
+                                <img class="spoon" src="public/images/spoon-01.png" >
                             </div>
                         </div>
                         
